--- a/views/login.hbs
+++ b/views/login.hbs
@@ -27,18 +27,23 @@
     </nav>
     
     <div class="card">
-        <form>
+        <form action="/auth/login" method="POST">
             <div class="form-group">
                 <label for="email">Email address</label>
-                <input type="email" class="form-control" id="email">
+                <input type="email" class="form-control" id="email" name="email">
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" id="password">
+                <input type="password" class="form-control" id="password" name="password">
             </div>
             <button type="submit" class="btn btn-primary">Login</button>
         </form>
     </div>
+
+    {{#if message}}
+        <h4 class="alert alert-danger mt-4">{{ message }}</h4>
+    {{/if }}
+
     
 </body>
 
