--- a/views/register.hbs
+++ b/views/register.hbs
@@ -27,31 +27,35 @@
     </nav>
     
     <div class="card">
-        <form>
+        <form action="/auth/register" method="POST">
             <div class="form-group">
                 <label for="username">Username</label>
-                <input type="text" class="form-control" id="username">
+                <input type="text" class="form-control" id="username" name="username">
             </div>
             <div class="form-group">
                 <label for="email">Email address</label>
-                <input type="email" class="form-control" id="email">
+                <input type="email" class="form-control" id="email" name="email">
             </div>
             <div class="form-group">
-                <label for="phoneNumber">Phone Number</label>
-                <input type="number" class="form-control" id="phoneNumber">
+                <label for="phone">Phone Number</label>
+                <input type="number" class="form-control" id="phone"  name="phone">
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" id="password">
+                <input type="password" class="form-control" id="password" name="password">
             </div>
             <div class="form-group">
                 <label for="passwordConfirm">Confirm Password</label>
-                <input type="password" class="form-control" id="passwordConfirm">
+                <input type="password" class="form-control" id="passwordConfirm" name="passwordConfirm">
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
     
+    {{#if message}}
+        <h4 class="alert alert-danger mt-4">{{ message }}</h4>
+    {{/if }}
+
 </body>
 
 </html>
